[project]
name = "openenv-agent"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "pandas",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
